# homelab-scripts

./: .gitignore  README.md
accessibility/: dbus-speak-notify.sh  hp-speak-notify  sr-read-mouse.sh  sr-read-screen.sh
audio/: notify-sink-switch.py
claude-skills/: README.md
claude-skills/docker-compose-helper/: SKILL.md
claude-skills/gdoc-edit/: SKILL.md
claude-skills/gdoc-read/: SKILL.md
claude-skills/gsheet-read/: SKILL.md
claude-skills/log-analyzer/: SKILL.md
claude-skills/nmap-interpreter/: SKILL.md
claude-skills/pcap-analyzer/: SKILL.md
cloud/: linode-bastion.sh
docker/: .env.example  calibre-import.sh  services.yml  wazuh.yml
docker/calibre-import/: .env.example  README.md  calibre-import.sh
docker/calibre-import/systemd/: calibre-import.service  calibre-import.timer  calibre-status-server.service
docker/systemd/: calibre-import.service  calibre-import.timer  calibre-status-server.service
docs/: hyprland-accessibility.md  hyprland-modular-config.md
hyprland/: audioswitch.py  launch-wallrizz  pick-wallpaper  waybar-audio-sink.py  zoomdown.py  zoomup.py
lib/python/: email.conf.example  email_sender.py
network/: home-network-status.sh
security/: install_security_tools.sh
setup/: install.sh
sprint-hub/: README.md  pyproject.toml  requirements.txt
sprint-hub/sprint_hub/: capture.py  cli.py  config.py  google_api.py  push.py  suggest.py  tui.py
sprint-hub/tests/: test_capture.py  test_cli.py  test_config.py  test_google_api.py  test_push.py  test_suggest.py  test_tui.py
